--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "latest",
+    "date-fns": "^2.30.0",
     "embla-carousel-react": "8.5.1",
     "hls.js": "latest",
     "input-otp": "1.4.1",
@@ -62,7 +62,7 @@
     "next-themes": "latest",
     "react": "^18.0.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "18.3.1",
     "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
